fix: fix broken one line layout in the new FF113 update

--- a/chrome/includes/cascade-responsive.css
+++ b/chrome/includes/cascade-responsive.css
@@ -2,6 +2,7 @@
 	#navigator-toolbox {
 		display: flex;
 		flex-wrap: wrap;
+		flex-direction: row;
 	}
 
 	#nav-bar {
